--- a/products2.html
+++ b/products2.html
@@ -50,7 +50,7 @@
     crossorigin="anonymous"></script>
 <body>
     <nav>
-        <a href="products1.html">Products 1</a>
+        <a href="index.html">Products 1</a>
         <a href="#">Products 2</a>
         <a href="products3.html">Products 3</a>
     </nav>
