--- a/products3.html
+++ b/products3.html
@@ -20,7 +20,7 @@
 <body>
 
     <nav>
-        <a href="products1.html">Products 1</a>
+        <a href="index.html">Products 1</a>
         <a href="products2.html">Products 2</a>
         <a href="#">Products 3</a>
     </nav>
