--- a/products2.html
+++ b/products2.html
@@ -53,6 +53,7 @@
         <a href="index.html">Products 1</a>
         <a href="#">Products 2</a>
         <a href="products3.html">Products 3</a>
+        <a href="product.xml"> Product_xml </a>
     </nav>
 
     <h1>Products2.html</h1>
