--- a/products3.html
+++ b/products3.html
@@ -23,6 +23,7 @@
         <a href="index.html">Products 1</a>
         <a href="products2.html">Products 2</a>
         <a href="#">Products 3</a>
+        <a href="product.xml"> Product_xml </a>
     </nav>
     
     <h1>Products3.html</h1>
