--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="#">Products 1</a>
     <a href="products2.html">Products 2</a>
     <a href="products3.html">Products 3</a>
+    <a href="product.xml"> Product_xml </a>
     </nav>
 
     <h1>Products1.html</h1>
